# matrix-rs

./: Cargo.toml  README.md
src/: lib.rs  matmul.rs  matrix.rs  ops.rs  rand.rs  scalarmul.rs  sparse.rs  tensor.rs  vector.rs
src/ops/: add.rs  float.rs  index.rs  matmul.rs  minmax.rs  mod.rs  num.rs  scalarmul.rs  sub.rs  sum.rs
