[package]
name = "matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
num-traits = "0.2.17"
num_cpus = "1.16.0"
rayon = { version = "1.10.0", optional = true }
mpi = { git = "https://github.com/rsmpi/rsmpi.git", branch = "main", optional = true }

[features]
default = []
rayon = [ "dep:rayon" ]
mpi = [ "dep:mpi" ]